# EMSel

./: README.md  core.py  emsel_util.py  pyproject.toml  requirements.txt  run_emsel.py  simulate_data.py
extract_vcfs/: README.md  misc_plot_stats.py  step1_subset_uk_anno.py  step2_eigensoft_convertf_subset.py  step3_eigensoft_smartpca_subset.py  step4_plot_pcas.py  step5_filter_pca_outlier_manual.py  step6_plot_map.py  step7_plot_sample_sizes.py  step8_extract_vcfs.py  step9_extract_capture_only.py
figures/: README.md
figures/gb_dataset/: README.md  SLURM_example.py  add_full_agg.py  aggregate_data.py  aggregate_real_data.py  analyze_real_data.py  combine_split_runs.py  compute_bootstraps.py  gb_figures.py  gb_permutation_fitting.py  mathieson_manhattans.py  ne_grid.py  permute_gb_data.py  plot_binned_trajectories.py  plot_gb_permutations.py  plot_genomewide_correlations.py  plot_means_and_missingness.py  plot_trajectories.py  sim_gb_bootstraps.py
figures/horse_dataset/: README.md  SLURM_example.py  horse_analysis.py  permute_target_dataset.py  plot_horse_trajectory.py
figures/simulation/: Ne_misspec_qqs.py  README.md  SLURM_example.py  SLURM_extra_sims.py  alt_test_mismatched_em.py  alternative_testing.py  big_bootstrap_fitting.py  big_d2_qqs.py  bootstrap_fitting.py  box_and_strip_plots.py  delta_ll_plotting_final.py  deltall_qqs_and_confusiontables.py  extract_means.py  file_str_boxplots.py  mathieson_mcvean_plots.py  qqs_and_aucs.py  (+7 more)
sample_datasets/: GB_c22.vcf  GB_means.txt  GB_missingness.txt  gengamma_params.pkl  horse_data_asip.csv  horse_data_mc1r.csv
(+7 files in other folders)
